--- a/views/BaseBack/base.html
+++ b/views/BaseBack/base.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1"> 
             <title>{% block title %}BlogCreator{% endblock %}</title>
-            <meta name="description" content="Création de Blog" />
+            <meta name="description" content="Voici mon Blog" />
             {% block stylesheets %}{% endblock %}
     </head>
-    <body class="{% block rootclass %}{% endblock %}">
+    <body class= "back" "{% block rootclass %}{% endblock %}">
         {% block body %}{% endblock %}
-        
+
         {% block javascripts %}
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
         {% endblock %}
