--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,4 @@
-{% extends "Base\base.html" %}
+{% extends "BaseFront\base.html" %}
 {% block title %}BlogCreator{% endblock %}
 {% block rootclass %}home{% endblock %}
 {% block stylesheets %}
