retouche html/css article

--- a/views/Blog/comment.html
+++ b/views/Blog/comment.html
@@ -1,7 +1,7 @@
 <div class="post-body">
     <div class="entry_content w250">
         <p>sdgjhezlvinvr nbrjtb,fkj lkrjety,bjr kljtrhkjejhtrjytj rtuye u ye'y-yertt hdfjj</p>
-        <div class=" ma mb w630 img"><img src="../assets/img/article_test.jpg"></div>
+        <div class=" ma mb15 w630 img"><img src="../assets/img/article_test.jpg"></div>
         
         <div class="post_meta">
             <div class="meta_info">
