--- a/views/Blog/comment.html
+++ b/views/Blog/comment.html
@@ -5,10 +5,10 @@
         
         <div class="post_meta">
             <div class="meta_info">
-                <span class="date">17 novembre 2015 - 18h38 min</span>
+                <span class="date">17 novembre 2015 - 18h38 min<!--{{article.date}}--></span>
             </div>
             <div class="meta_info">
-        <span class="comment">2<!--{{ idea.nbComments }}--></span>
+        <span class="comment">2<!--{{ article.nbComments }}--></span>
             </div>
         </div>
     </div>
