--- a/views/Blog/detailArticle.html
+++ b/views/Blog/detailArticle.html
@@ -17,7 +17,9 @@
 				</header>
 				<div class="blog_post">
 					<!--Juste l'article choisi-->
+					<!--{% for item in article %} {-->
         			{% include 'comment.html'%}
+        			<!--{% endfor %}-->
 				</div>
 			</div>
 		</div>
