--- a/views/BaseFront/base.html
+++ b/views/BaseFront/base.html
@@ -8,7 +8,7 @@
             <link rel="icon" href="../../assets/img/favicon.gif">
             {% block stylesheets %}{% endblock %}
     </head>
-    <body class="{% block rootclass %}{% endblock %}">
+    <body class="{% block rootclass %}{% endblock %}" data-spy="scroll" data-target=".navbar-fixed-top">
         {% block body %}{% endblock %}
 
         {% block javascripts %}
