--- a/views/index.html
+++ b/views/index.html
@@ -3,24 +3,72 @@
 {% block rootclass %}home{% endblock %}
 {% block stylesheets %}
 <link rel="stylesheet" type="text/css" href="../assets/css/home.css">
+<link href="../assets/css/bootstrap.css" rel="stylesheet">
+<link href="../assets/css/grayscale.css" rel="stylesheet">
 {% endblock %}
 {% block body %}
 
+	<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
 		<div id="container">
-			<div class="top cl-effect-21">
-				<a class="box_login" href="#"><span>Connexion</span></a>
-				<a class="box_signUp" href="#"><span>Inscription</span></a>
+			<div class="top cl-effect-21 collapse navbar-collapse navbar-main-collapse">
+				<ul class="nav navbar-nav">
+					<li class="hidden">
+						<a href="#page-top"></a>
+					</li>
+					<li>
+						<a class="box_login page-scroll" href="#"><span>Connexion</span></a>
+					</li>
+					<li>
+						<a class="box_signUp page-scroll" href="#"><span>Inscription</span></a>
+					</li>
+					<li>
+                        <a class="page-scroll" href="#blogs">Blogs</a>
+                    </li>
+				</ul>
 			</div>
-			<h1 class="logo">
-			 <img src="../assets/img/logo.png">
-			</h1>
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                    <i class="fa fa-bars"></i>
+                </button>
+				<h1 class="logo">
+					<a class="navbar-brand page-scroll" href="#page-top">
+						<img src="../assets/img/logo.png">
+					</a>
+				</h1>
+			</div>
 		</div>
+	</nav>
 		
-		<!-- main content -->
-		<div class="main">
-			<h2>Crée ton Blog</h2>
-			<button class="button button--pipaluk button--inverted">Crée Ton Blog</button>
-		</div>
+	<!-- main content -->
+	<div class="main">
+		<div class="intro-body">
+            <h2 class="brand-heading">Crée Ton Blog</h2>
+            <p class="intro-text"><button class="button button--pipaluk button--inverted">Crée Ton Blog</button></p>
+            <div>
+	            <a href="#blogs" class="btn btn-circle page-scroll">
+	                <i class="fa fa-angle-double-down animated"></i>
+	            </a>
+            </div>
+            
+         </div>
+	</div>
+
+
+	<!--Vue des blogs-->
+	<section id="blogs" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Blogs</h2>
+                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
+                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="blogs" class="container content-section text-center">
+        
+    </section>
 
     <!-- Overlay -->
     <div class="fade"></div>
@@ -38,17 +86,23 @@
 						</div>
 				</div>
 				<div class="morph-content sign">
-						<div class="content-style-form content-style-form-2">
-							<span class="icon icon-close">Close</span>
-							<h2>Inscription</h2>
-							<form>
-								<p><label>Email</label><input type="text" /></p>
-								<p><label>Password</label><input type="password" /></p>
-								<p><label>Repeat Password</label><input type="password" /></p>
-								<p><button type="submit">Sign Up</button></p>
-							</form>
-						</div>
+					<div class="content-style-form content-style-form-2">
+						<span class="icon icon-close">Close</span>
+						<h2>Inscription</h2>
+						<form>
+							<p><label>Pseudo</label><input type="text" /></p>
+							<p><label>Email</label><input type="text" /></p>
+							<p><label>Password</label><input type="password" /></p>
+							<p><label>Repeat Password</label><input type="password" /></p>
+							<p><button type="submit">Sign Up</button></p>
+						</form>
+					</div>
 				</div>
 {% endblock %}
+{% block javascripts%}
+	{% parent %}
 		<script type="text/javascript" src="../assets/js/home.js"></script>
+		<script src=".../assets/js/bootstrap.min.js"></script>
+ 		<script src="../assets/js/grayscale.js"></script> 
+{% endblock %}
 </html>
