--- a/assets/css/grayscale.css
+++ b/assets/css/grayscale.css
@@ -30,10 +30,13 @@ p {
 }
 
 a {
-    color: #42dca3;
+    color: #88A08A;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
+}
+ul {
+    list-style: outside none none;
 }
 
 .navbar-custom {
