--- a/views/index.html
+++ b/views/index.html
@@ -57,17 +57,20 @@
 	<!--Vue des blogs-->
 	<section id="blogs" class="container content-section text-center">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Blogs</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
-            </div>
+        	<div>
+        		<h2>Blogs</h2>
+        		<form id="searchform" class="search" method="get" action="#">
+					<div class="input-append">
+						<input type="text" id="s" name="s" clas="search_text" placeholder="Rechercher un blog">
+						<input type="submit" id="search_submit" name="submit" class="btn search_btn" value="Ok">
+					</div>
+				</form>
+        	</div>
+            <div class="blogs line">
+            <!--BOUCLE-->
+                {% include 'BaseFront/blogsHome.html' %}
+    		</div>
         </div>
-    </section>
-
-    <section id="blogs" class="container content-section text-center">
-        
     </section>
 
     <!-- Overlay -->
