--- a/views/index.html
+++ b/views/index.html
@@ -24,6 +24,13 @@
 					<li>
                         <a class="page-scroll" href="#blogs">Blogs</a>
                     </li>
+                    <li>
+                        <form action="#" method="post" id="search" class="left">
+					        <img src="assets/img/nav-search-loupe.png">
+					        <input name="search" type="search" placeholder="Rechercher..." />
+					        <button type="submit">ok</button>
+				    	</form>
+                    </li>
 				</ul>
 			</div>
 			<div class="navbar-header">
@@ -31,7 +38,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
 				<h1 class="logo">
-					<a class="navbar-brand page-scroll" href="#page-top">
+					<a class="navbar-brand page-scroll" href="#">
 						<img src="../assets/img/logo.png">
 					</a>
 				</h1>
@@ -59,12 +66,6 @@
         <div class="row">
         	<div>
         		<h2>Blogs</h2>
-        		<form id="searchform" class="search" method="get" action="#">
-					<div class="input-append">
-						<input type="text" id="s" name="s" clas="search_text" placeholder="Rechercher un blog">
-						<input type="submit" id="search_submit" name="submit" class="btn search_btn" value="Ok">
-					</div>
-				</form>
         	</div>
             <div class="blogs line">
             <!--BOUCLE-->
