--- a/assets/css/grayscale.css
+++ b/assets/css/grayscale.css
@@ -43,7 +43,7 @@ ul {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(255,255,255,.3);
     text-transform: uppercase;
-    background-color: #000;
+    background-color: #EEDDAF;
 }
 
 .navbar-custom .navbar-brand {
