--- a/views/index.html
+++ b/views/index.html
@@ -79,34 +79,35 @@
 
     <!-- Popin -->
 		<div class="morph-content login">
-						<div class="content-style-form content-style-form-1">
-							<span class="icon icon-close">Close</span>
-							<h2>Connexion</h2>
-							<form>
-								<p><label>Email</label><input type="text" /></p>
-								<p><label>Password</label><input type="password" /></p>
-								<p><button type="submit">Login</button></p>
-							</form>
-						</div>
-				</div>
-				<div class="morph-content sign">
-					<div class="content-style-form content-style-form-2">
-						<span class="icon icon-close">Close</span>
-						<h2>Inscription</h2>
-						<form>
-							<p><label>Pseudo</label><input type="text" /></p>
-							<p><label>Email</label><input type="text" /></p>
-							<p><label>Password</label><input type="password" /></p>
-							<p><label>Repeat Password</label><input type="password" /></p>
-							<p><button type="submit">Sign Up</button></p>
-						</form>
-					</div>
-				</div>
+			<div class="content-style-form content-style-form-1">
+				<span class="icon icon-close">Close</span>
+				<h2>Connexion</h2>
+				<form>
+					<p><label>Email</label><input type="text" /></p>
+					<p><label>Password</label><input type="password" /></p>
+					<p><button type="submit">Login</button></p>
+				</form>
+			</div>
+		</div>
+		<div class="morph-content sign">
+			<div class="content-style-form content-style-form-2">
+				<span class="icon icon-close">Close</span>
+				<h2>Inscription</h2>
+				<form>
+					<p><label>Pseudo</label><input type="text" /></p>
+					<p><label>Email</label><input type="text" /></p>
+					<p><label>Password</label><input type="password" /></p>
+					<p><label>Repeat Password</label><input type="password" /></p>
+					<p><button type="submit">Sign Up</button></p>
+				</form>
+			</div>
+		</div>
 {% endblock %}
 {% block javascripts%}
 	{% parent %}
 		<script type="text/javascript" src="../assets/js/home.js"></script>
-		<script src=".../assets/js/bootstrap.min.js"></script>
- 		<script src="../assets/js/grayscale.js"></script> 
+		<script type="text/javascript" src=".../assets/js/bootstrap.min.js"></script>
+ 		<script type="text/javascript" src="../assets/js/grayscale.js"></script> 
+ 		<script type="text/javascript"src="../assets/js/jquery.easing.min.js"></script>
 {% endblock %}
 </html>
