--- a/views/index.html
+++ b/views/index.html
@@ -24,13 +24,7 @@
 					<li>
                         <a class="page-scroll" href="#blogs">Blogs</a>
                     </li>
-                    <li>
-                        <form action="#" method="post" id="search" class="left">
-					        <img src="assets/img/nav-search-loupe.png">
-					        <input name="search" type="search" placeholder="Rechercher..." />
-					        <button type="submit">ok</button>
-				    	</form>
-                    </li>
+                    
 				</ul>
 			</div>
 			<div class="navbar-header">
@@ -42,6 +36,15 @@
 						<img src="../assets/img/logo.png">
 					</a>
 				</h1>
+				<ul class="nav navbar-nav">
+				<li>
+                    <form action="#" method="post" id="search" class="left">
+					   <img src="assets/img/nav-search-loupe.png">
+					    <input name="search" type="search" placeholder="Rechercher des blogs" />
+					    <button type="submit">ok</button>
+				    </form>
+                </li>
+                </ul>
 			</div>
 		</div>
 	</nav>
