--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,5 +1,6 @@
 body {
 	background: url(../img/background.jpg) no-repeat scroll center bottom; 
+	background-position: 100%;
 }
 #container h1 {
 	width: 41%;
@@ -44,11 +45,13 @@ input:-moz-placeholder { font-size: 0.8em; }
 }
 .nav form {
 	margin-top: 17px;
+	position: relative;
+	float: left;
 }
 .nav img {
 	position: absolute;
 	left: 0px;
-	top: 14px;
+	top: -3px;
 }
 .nav input {
 	width: 80%;
@@ -88,6 +91,7 @@ nav form button {
 	text-transform: uppercase;
 	padding: 0px 0.5em;
 	height: 1.65em;
+	font-size: inherit;
 }
 .cl-effect-21 a {
 	padding: 10px;
@@ -150,7 +154,7 @@ nav form button {
 	margin: 0 auto;
 	padding: 275px 0 10em 0;
 	max-width: 1100px;
-	width: 27%;
+	width: 385px;
 }
 
 .main h2 {
@@ -338,7 +342,7 @@ form p {
     margin: auto;
 }
 .blogs-col {
-	width: 33%;
+	width: 355px;
 	display: inline-block;
 	margin-top: 40px;
 }
