--- a/views/index.html
+++ b/views/index.html
@@ -41,7 +41,7 @@
                     <form action="#" method="post" id="search" class="left">
 					   <img src="assets/img/nav-search-loupe.png">
 					    <input name="search" type="search" placeholder="Rechercher des blogs" />
-					    <button type="submit">ok</button>
+					    <button type="submit" name="ok">ok</button> <!-- Redirect sur #blogs-->
 				    </form>
                 </li>
                 </ul>
