--- a/views/BaseBack/header.html
+++ b/views/BaseBack/header.html
@@ -3,7 +3,7 @@
 	<div id="container">
 		<div class="navbar-header">
 			<h1 class="logo">
-				<a class="navbar-brand page-scroll" href="#">
+				<a class="navbar-brand page-scroll" href="/accueil">
 					<img src="../assets/img/logo3.png">
 				</a>
 			</h1>
@@ -22,10 +22,9 @@
 			            <img src="../assets/img/user-test.gif" alt="photo profil">
 			            <div class="photo-username">Lili</div>
 			        </a>
-			        
 			        <div id="menu">
 			            <ul class="clearfix">
-			                <li><a href="/user/profil">Mon profil</a></li>
+			                <li><a href="/profil">Mon profil</a></li>
 			                <li><a href="#" class="userBlog" >Mon Blog</a></li>
 			                <li><a href="#">Déconnexion</a></li>
 			            </ul>
