--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -8,24 +8,26 @@ input:-moz-placeholder { font-size: 0.8em; }
     background-color: #FFF;
 }
 nav {
-    background-color: #EEDDAF !important; 
+    background-color: #EEDDAF !important;
+    padding: 10px 0px;
+    letter-spacing: 1px; 
+    position: relative !important;
 }
 
 /*search*/
 
 .nav form {
-    margin-top: 17px;
     position: relative;
     float: left;
 }
 .nav img {
     position: absolute;
-    left: 0px;
-    top: -3px;
+    left: 3px;
+    top: 3px;
 }
 .nav input {
     width: 80%;
-    height: 22px;
+    height: 36px;
     line-height: 2.5em;
     padding: 0px 0.5em 0px 2em;
     font-size: 1.5em;
@@ -60,7 +62,7 @@ nav form button {
     color: #F7F7F7;
     text-transform: uppercase;
     padding: 0px 0.5em;
-    height: 1.6em;
+    height: 2.55em;
     font-size: inherit;
 }
 
@@ -71,14 +73,15 @@ nav form button {
     float: left;
     position: absolute;
     min-width: 40%;
+    padding-left: 63px;
 }
 .account p {
     height: 80px;
     float: left;
-    padding-right: 1.4em;
+    font-size: 20px;
+    line-height: 1.6;
 }
 .account p a {
-    margin-top: 1.2em;
     display: inline-block;
     position: relative;
     background: #575050 url("../img/plus.png") no-repeat scroll 1em 0.7em;
@@ -91,17 +94,14 @@ nav form button {
     transition: all 0.3s ease 0s;
 }
 .account .photo {
-    width: 60%;
+    width: 30%;
     float: left;
     position: relative;
-    margin: 0.6em 1em 0px 1.4em;
+    margin: 0em 1em 0px 1.4em;
 }
 .account .photo img {
     position: relative;
     float: left;
-}
-.account .photo:hover  #menu ul{
-    display: block;
 }
 .account .photo .photo-username {
     float: left;
@@ -112,14 +112,16 @@ nav form button {
 #menu {
     position: absolute;
     overflow: visible;
-    top: 48px;
-    right: 288px;
+    top: 45px;
+    right: 243px;
     padding: 0px;
     z-index: 11;
     height: 118px;
     transition: all 0.3s ease 0s;
     box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.33);
     opacity: 1;
+    display: none;
+    
 }
 #menu ul {
     width: 100%;
@@ -127,7 +129,7 @@ nav form button {
     padding: 0px;
     margin: 0px;
     border: medium none;
-    display: none;
+    
 }
 #menu li {
     border-bottom: 1px solid #EEDDAF;
@@ -141,5 +143,8 @@ nav form button {
 #container h1 {
     width: 24%;
     margin: auto auto auto 19%;
-    float: left;
+    float: left;   
+}
+#container h1 img {
+    width: 20%;
 }
