Rajout de liens

--- a/views/BaseBack/header.html
+++ b/views/BaseBack/header.html
@@ -17,7 +17,7 @@
             </li>
             
 	            <div class="account">
-			        <p class="post"><a href="#" title="">Poster un article</a></p>
+			        <p class="post"><a href="/create" title="">Poster un article</a></p>
 			        <a href="#" class="photo">
 			            <img src="../assets/img/user-test.gif" alt="photo profil">
 			            <div class="photo-username">Lili</div>
