--- a/views/BaseBack/profil.html
+++ b/views/BaseBack/profil.html
@@ -15,7 +15,7 @@
 			<img src="../assets/img/user-test.gif" alt="profil">
 			<h3>Lili</h3>
 		</div>
-		<button class="button button--pipaluk button--inverted clear"><a href="/create">Crée Un Blog</a></button>
+		<a href="/create"><button class="button button--pipaluk button--inverted clear">Crée Un Blog</button></a>
 		<div class="infos">
 			<div class="block">
 	        	<h2>Mes Blogs</h2>
