--- a/assets/css/homeBlog.css
+++ b/assets/css/homeBlog.css
@@ -144,6 +144,9 @@ form {
 	padding: 6px 20px 2px;
 	float: left;
 }
+
+/* ARTICLE */
+
 .latest-post {
     margin-bottom: 15px;
     border-bottom: 1px solid #DDD;
