--- a/views/BaseBack/list.html
+++ b/views/BaseBack/list.html
@@ -18,6 +18,13 @@
         <span class="comment">2<!--{{ idea.nbComments }}--></span>
             </div>
         </div>
+        <div class="edit">
+            <a href="/create">Modifier</a>
+            <form>
+                <button type="submit">X</button>
+            </form>
+            
+        </div>
     </div>
     <div class="clear"></div>
 </div>
