--- a/views/index.html
+++ b/views/index.html
@@ -53,7 +53,7 @@
 	<div class="main">
 		<div class="intro-body">
             <h2 class="brand-heading">Crée Ton Blog</h2>
-            <p class="intro-text"><button class="button button--pipaluk button--inverted">Crée Ton Blog</button></p>
+            <!--<p class="intro-text"><button class="button button--pipaluk button--inverted">Crée Ton Blog</button></p>-->
             <div>
 	            <a href="#blogs" class="btn btn-circle page-scroll">
 	                <i class="fa fa-angle-double-down animated"></i>
