Titre homePage modif

--- a/views/index.html
+++ b/views/index.html
@@ -52,7 +52,7 @@
 	<!-- main content -->
 	<div class="main">
 		<div class="intro-body">
-            <h2 class="brand-heading">Crée Ton Blog</h2>
+            <h2 class="brand-heading">Inscris-toi & Crée Ton Blog</h2>
             <!--<p class="intro-text"><button class="button button--pipaluk button--inverted">Crée Ton Blog</button></p>-->
             <div>
 	            <a href="#blogs" class="btn btn-circle page-scroll">
