--- a/views/BaseBack/list.html
+++ b/views/BaseBack/list.html
@@ -15,7 +15,7 @@
                 <span class="date">17 novembre 2015 - 18h38 min</span>
             </div>
             <div class="meta_info">
-        <span class="comment">2<!--{{ idea.nbComments }}--></span>
+        <span class="comment"><a href="/Blog/article">2</a><!--{{ idea.nbComments }}--></span>
             </div>
         </div>
         <div class="edit">
