--- a/views/Blog/articles.html
+++ b/views/Blog/articles.html
@@ -3,7 +3,7 @@
     <div class="w250 img"><img src="../assets/img/article_test.jpg"></div>
     <div class="content_post w250">
         <div class="post_title">
-            <a href="/detailArticle">
+            <a href="article">
                 <h4>Boulou</h4>
             </a>
         </div>
