--- a/assets/css/back.css
+++ b/assets/css/back.css
@@ -194,7 +194,8 @@ h2 {
     margin-bottom: 15px;
     border-bottom: 1px solid #DDD;
     padding-bottom: 15px;
-    width: 620px;
+    width: 75%;
+	margin-left: 13%;
 }
 .articles .img img{
 	min-height: 1px;
@@ -238,6 +239,9 @@ h2 {
 }
 .articles .meta_info .comment::before {
     background-position: -30px 0px;
+}
+.articles .meta_info .comment:hover {
+   text-decoration: underline;
 }
 .articles .meta_info .date {
 	font-size: 12px;
