--- a/views/BaseFront/header.html
+++ b/views/BaseFront/header.html
@@ -11,7 +11,7 @@
 		<div class="nav_container">
 			<nav class="main_navbar navbar">
 				<ul id="menu-menu" class="nav">
-					<li><a href="#">ACCUEIL</a></li>
+					<li><a href="Blog">ACCUEIL</a></li>
 					<li><a href="#">A PROPOS</a></li>
 					<li><a href="#">CONTACT</a></li>
 				</ul>
