--- a/views/Blog/comment.html
+++ b/views/Blog/comment.html
@@ -17,6 +17,20 @@
         <div class="comment_header">
             <h4>COMMENTAIRES</h4>
         </div>
+        <div class="comment_users">
+            <img src="../assets/img/test-user.jpeg">
+            <div class="content_post w250">
+                <p><a href="">Blala</a></p>
+                <div class="post_desc">
+                    <p>Trouver des gens de moins de 200 likes étaient assez difficile. Moi j’avais plutôt opté pour des blogs assez récents quand même que j’apprécie et qui mérite de se faire connaître davantage. Super sympa tes réponses en passant. Effectivement, la transition des tongs aux talons hauts risquent d’être difficiles hehe..l’inclinaison du pied est légèrement différente. :) Bonne continuation dans ton voyage et pour te rassurer, malgré la vigilance qui doit être toujours de mise quand même, les gens sont super sympas en Amérique latine. Les règles de sécurité de base demeure, mais il ne faut pas devenir parano non plus. À plus!</p>
+                </div>
+                <div class="post_meta">
+                    <div class="meta_info">
+                        <span class="date">17 novembre 2015 - 18h38 min</span>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="comment_form">
             <form id="commentform" class="commentform" method="post" action="#">
                 <input type="text" id="author" name="name" placeholder="Name"/>
