--- a/views/index.html
+++ b/views/index.html
@@ -109,7 +109,7 @@
 {% block javascripts%}
 	{% parent %}
 		<script type="text/javascript" src="../assets/js/home.js"></script>
-		<script type="text/javascript" src=".../assets/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="../assets/js/bootstrap.js"></script>
  		<script type="text/javascript" src="../assets/js/grayscale.js"></script> 
  		<script type="text/javascript"src="../assets/js/jquery.easing.min.js"></script>
 {% endblock %}
