display error in brut text

--- a/views/BaseFront/base.html
+++ b/views/BaseFront/base.html
@@ -6,6 +6,7 @@
             <title>{% block title %}BlogCreator{% endblock %}</title>
             <meta name="description" content="Création de Blog" />
             <link rel="icon" href="../../assets/img/favicon.gif">
+           <script type="text/javascript" src="../assets/js/notifier.js"></script>
             {% block stylesheets %}{% endblock %}
     </head>
     <body class="{% block rootclass %}{% endblock %}" data-spy="scroll" data-target=".navbar-fixed-top">
