--- a/views/Blog/comment.html
+++ b/views/Blog/comment.html
@@ -28,6 +28,11 @@
                     <div class="meta_info">
                         <span class="date">17 novembre 2015 - 18h38 min</span>
                     </div>
+                    <div>
+                        <form>
+                            <button type="submit">X</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
