--- a/views/Blog/detailArticle.html
+++ b/views/Blog/detailArticle.html
@@ -23,7 +23,7 @@
 			</div>
 		</div>
 		<aside class="page_side_bar home_sidebar">
-			<div id="search" class="widget_search">
+				{% include 'profil.html' %}
 				{% include 'search.html'%}
 			<div id="postlist" class="widget_container">
 				<div class="widget_title">
