--- a/views/Blog/home.html
+++ b/views/Blog/home.html
@@ -24,6 +24,7 @@
 			<div class="news"></div>
 		</div>
 		<aside class="page_side_bar home_sidebar">
+				{% include 'profil.html' %}
 				{% include 'search.html'%}
 			<div id="postlist" class="widget_container">
 				<div class="widget_title">
