--- a/assets/css/grayscale.css
+++ b/assets/css/grayscale.css
@@ -8,7 +8,7 @@ body {
     width: 100%;
     height: 100%;
     color: #fff;
-    background-color: #EEDDAF;
+    background-color: rgb(239, 230, 210);;
 }
 
 html {
@@ -44,7 +44,7 @@ ul {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(255,255,255,.3);
     text-transform: uppercase;
-    background-color: #EEDDAF;
+    background-color: rgb(239, 230, 210);;
 }
 
 .navbar-custom .navbar-brand {
@@ -114,7 +114,7 @@ ul {
     .navbar-custom.top-nav-collapse {
         padding: 0;
         border-bottom: 1px solid rgba(255,255,255,.3);
-        background: #EEDDAF;
+        background: rgb(239, 230, 210);;
     }
 }
 
