--- a/views/BaseBack/create.html
+++ b/views/BaseBack/create.html
@@ -16,11 +16,12 @@
 		<label><h3>Nom du blog</h3></label>
 		<input type="text" name="name" placeholder="Nom du blog"/>
 		<!--else-->
+		<label><h3>Catégories</h3></label>
+		<input type="text" name="categorie" placeholder="Catégories"/>
 		<label><h3>Titre</h3></label>
 		<input type="text" name="title" placeholder="Titre de l'article"/>
 		<textarea id="myTextarea"></textarea>
-		<label><h3>Tags</h3></label>
-		<input type="text" name="tag" placeholder="tag"/>
+		
 		<input type="submit" name="submit" value="Publiez"/>
 	</div>
 {% block javascripts%}
