--- a/views/BaseBack/header.html
+++ b/views/BaseBack/header.html
@@ -20,7 +20,7 @@
 			        <p class="post"><a href="/articles" title="">Poster un article</a></p>
 			        <a href="#" class="photo">
 			            <img src="../assets/img/user-test.gif" alt="photo profil">
-			            <div class="photo-username">Lili</div>
+			            <div class="photo-username">{{session.pseudo}} lili</div>
 			        </a>
 			        <div id="menu">
 			            <ul class="clearfix">
