--- a/views/BaseBack/articles.html
+++ b/views/BaseBack/articles.html
@@ -2,6 +2,7 @@
 {% block title %}BlogCreator{% endblock %}
 {% block rootclass %}articles{% endblock %}
 {% block stylesheets %}
+{% parent %}
 <link href="../assets/css/bootstrap.css" rel="stylesheet">
 <link href="../assets/css/header.css" rel="stylesheet">
 <link href="../assets/css/grayscale.css" rel="stylesheet">
