--- a/assets/css/back.css
+++ b/assets/css/back.css
@@ -23,7 +23,6 @@
 }
 .main h3 {
 	color: #88A08A;
-	margin-left: 10px;
 	margin-top: 0px;
 }
 .main > div {
@@ -371,6 +370,10 @@ input[type="text"] {
 .main .user p {
 	font-size: 12px;
 	color: #B2B2B2;
+	padding: 44px 0px 0px 0px;
+}
+.main .user h3 {
+	padding-left: 116px;
 }
 
 /*MEDIA QUERI*/
