--- a/views/BaseBack/create.html
+++ b/views/BaseBack/create.html
@@ -10,19 +10,21 @@
 {% block body %}
 	{% include 'header.html' %}
 	<div class="main">
+		<div class="wrap">
 	<!--Si premier blog-->
-		<form>
-			<label><h3>Nom du blog</h3></label>
-			<input type="text" name="name" placeholder="Nom du blog"/>
-			<!--else-->
-			<label><h3>Catégories</h3></label>
-			<input type="text" name="categorie" placeholder="Catégories"/>
-			<label><h3>Titre</h3></label>
-			<input type="text" name="title" placeholder="Titre de l'article"/>
-			<textarea id="myTextarea"></textarea>
-			
-			<input type="submit" name="submit" value="Publiez"/>
-		</form>
+			<form>
+				<label><h3>Nom du blog</h3></label>
+				<input type="text" name="name" placeholder="Nom du blog"/>
+				<!--else-->
+				<label><h3>Catégories</h3></label>
+				<input type="text" name="categorie" placeholder="Catégories"/>
+				<label><h3>Titre</h3></label>
+				<input type="text" name="title" placeholder="Titre de l'article"/>
+				<textarea id="myTextarea"></textarea>
+				
+				<input type="submit" name="submit" value="Publiez"/>
+			</form>
+		</div>
 	</div>
 {% block javascripts%}
 	{% parent %}
