--- a/views/BaseBack/profil.html
+++ b/views/BaseBack/profil.html
@@ -12,111 +12,113 @@
 	{% include 'header.html' %}
 
 	<div class="main">
-		<div class="user">
-			<img src="../assets/img/user-test.gif" alt="profil">
-			<h3>Lili</h3>
-			<p>Changer sa photo de profil</p>
-		</div>
-		<a href="/create"><button class="button button--pipaluk button--inverted clear">Creer Un Blog</button></a>
-		<!--MESSAGERIE-->
-		<div class="messagerie">
-			<form action="#" method="post" id="search" class="left">
-			   <input name="search" id="msg" type="text" placeholder="Laissez un message à ..." />
-			   <button type="submit" name="send">Envoyer</button>
-			</form>
-			<div class="overflow">
-				<div class="message">
-					<img src="../assets/img/user-test.gif" alt="profil">
-					<div class="content_post w250">
-						<h3>Lili</h3>
-						<div class="post_desc">
-							<p>T'es trop belle ;)</p>
-						</div>
-						<div class="post_meta">
-		                    <div class="meta_info">
-		                        <span class="date">17 novembre 2015 - 18h38 min</span>
-		                    </div>
-		                    <div>
-		                        <form>
-		                            <button type="submit" id="suppr">X</button>
-		                        </form>
-		                    </div>
-		                </div>
-		            </div>
-				</div>
-				<div class="message">
-					<img src="../assets/img/user-test.gif" alt="profil">
-					<div class="content_post w250">
-						<h3>Lili</h3>
-						<div class="post_desc">
-							<p>T'es trop belle ;)</p>
-						</div>
-						<div class="post_meta">
-		                    <div class="meta_info">
-		                        <span class="date">17 novembre 2015 - 18h38 min</span>
-		                    </div>
-		                    <div>
-		                        <form>
-		                            <button type="submit" id="suppr">X</button>
-		                        </form>
-		                    </div>
-		                </div>
-		            </div>
-				</div>
-				<div class="message">
-					<img src="../assets/img/user-test.gif" alt="profil">
-					<div class="content_post w250">
-						<h3>Lili</h3>
-						<div class="post_desc">
-							<p>T'es trop belle ;)</p>
-						</div>
-						<div class="post_meta">
-		                    <div class="meta_info">
-		                        <span class="date">17 novembre 2015 - 18h38 min</span>
-		                    </div>
-		                    <div>
-		                        <form>
-		                            <button type="submit" id="suppr">X</button>
-		                        </form>
-		                    </div>
-		                </div>
-		            </div>
-				</div>
-				<div class="message">
-					<img src="../assets/img/user-test.gif" alt="profil">
-					<div class="content_post w250">
-						<h3>Lili</h3>
-						<div class="post_desc">
-							<p>T'es trop belle ;)</p>
-						</div>
-						<div class="post_meta">
-		                    <div class="meta_info">
-		                        <span class="date">17 novembre 2015 - 18h38 min</span>
-		                    </div>
-		                    <div>
-		                        <form>
-		                            <button type="submit" id="suppr">X</button>
-		                        </form>
-		                    </div>
-		                </div>
-		            </div>
+		<div class="wrap">
+			<div class="user">
+				<img src="../assets/img/user-test.gif" alt="profil">
+				<h3>Lili</h3>
+				<p>Changer sa photo de profil</p>
+			</div>
+			<a href="/create"><button class="button button--pipaluk button--inverted clear">Creer Un Blog</button></a>
+			<!--MESSAGERIE-->
+			<div class="messagerie">
+				<form action="#" method="post" id="search" class="left">
+				   <input name="search" id="msg" type="text" placeholder="Laissez un message à ..." />
+				   <button type="submit" name="send">Envoyer</button>
+				</form>
+				<div class="overflow">
+					<div class="message">
+						<img src="../assets/img/user-test.gif" alt="profil">
+						<div class="content_post w250">
+							<h3>Lili</h3>
+							<div class="post_desc">
+								<p>T'es trop belle ;)</p>
+							</div>
+							<div class="post_meta">
+			                    <div class="meta_info">
+			                        <span class="date">17 novembre 2015 - 18h38 min</span>
+			                    </div>
+			                    <div>
+			                        <form>
+			                            <button type="submit" id="suppr">X</button>
+			                        </form>
+			                    </div>
+			                </div>
+			            </div>
+					</div>
+					<div class="message">
+						<img src="../assets/img/user-test.gif" alt="profil">
+						<div class="content_post w250">
+							<h3>Lili</h3>
+							<div class="post_desc">
+								<p>T'es trop belle ;)</p>
+							</div>
+							<div class="post_meta">
+			                    <div class="meta_info">
+			                        <span class="date">17 novembre 2015 - 18h38 min</span>
+			                    </div>
+			                    <div>
+			                        <form>
+			                            <button type="submit" id="suppr">X</button>
+			                        </form>
+			                    </div>
+			                </div>
+			            </div>
+					</div>
+					<div class="message">
+						<img src="../assets/img/user-test.gif" alt="profil">
+						<div class="content_post w250">
+							<h3>Lili</h3>
+							<div class="post_desc">
+								<p>T'es trop belle ;)</p>
+							</div>
+							<div class="post_meta">
+			                    <div class="meta_info">
+			                        <span class="date">17 novembre 2015 - 18h38 min</span>
+			                    </div>
+			                    <div>
+			                        <form>
+			                            <button type="submit" id="suppr">X</button>
+			                        </form>
+			                    </div>
+			                </div>
+			            </div>
+					</div>
+					<div class="message">
+						<img src="../assets/img/user-test.gif" alt="profil">
+						<div class="content_post w250">
+							<h3>Lili</h3>
+							<div class="post_desc">
+								<p>T'es trop belle ;)</p>
+							</div>
+							<div class="post_meta">
+			                    <div class="meta_info">
+			                        <span class="date">17 novembre 2015 - 18h38 min</span>
+			                    </div>
+			                    <div>
+			                        <form>
+			                            <button type="submit" id="suppr">X</button>
+			                        </form>
+			                    </div>
+			                </div>
+			            </div>
+					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="infos">
-			<div class="block">
-	        	<h2>Mes Blogs</h2>
-	        	<div>
-	        		<p><a href="#">loulilou</a></p>
-	        	<p><a href="#">fff965</a></p>
-	        	</div>
-			</div>
-			<div class="block">
-				<h2>Mes Amis</h2>
-				<div>
-					<p><a href="#">moi</a></p>
-					<p><a href="#">moi</a></p>
+			<div class="infos">
+				<div class="block">
+		        	<h2>Mes Blogs</h2>
+		        	<div>
+		        		<p><a href="#">loulilou</a></p>
+		        	<p><a href="#">fff965</a></p>
+		        	</div>
+				</div>
+				<div class="block">
+					<h2>Mes Amis</h2>
+					<div>
+						<p><a href="#">moi</a></p>
+						<p><a href="#">moi</a></p>
+					</div>
 				</div>
 			</div>
 		</div>
